Fix CSS layout distortion in production build

--- a/src/components/GroupChat.css
+++ b/src/components/GroupChat.css
@@ -198,7 +198,7 @@
 
         input {
             flex: 1;
-            background-color: rgba(17, 25, 40, 0.5);;
+            background-color: rgba(17, 25, 40, 0.5);
             border: none;
             outline: none;
             color: white;
@@ -217,7 +217,7 @@
             .emoji-picker {
                 position: absolute;
                 bottom: 50px;
-                left: 0;
+                left: -300px;
             }
         }
 
